--- a/DevFolio/css/style.css
+++ b/DevFolio/css/style.css
@@ -1,17 +1,10 @@
-/*
-  Theme Name: DevFolio
-  Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
 
-/*======================================
-//--//-->   STYLES GENERALES
-======================================*/
 
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
+  /* font-family: 'Thasadith', sans-serif; */
+  font-family: 'Work Sans', sans-serif;
 }
 
 h1,
